Add MaxMinQueue and MaxMinStack implementations with constant-time access to extremal elements
- Introduced `MaxMinQueue`, a specialised queue allowing efficient retrieval of the maximum or minimum element based on configuration.
- Added `MaxMinStack`, a stack supporting constant-time access to the maximum or minimum element with auxiliary tracking.
- Refactored `SimpleQueue` and `SimpleStack` to protect internal data and enable extension.
- Updated `Stack` interface: changed `push` to return a boolean for success indication.